--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ru">
 
 <head>
 
 	<meta charset="utf-8">
-	<title>OptimizedHTML 5</title>
+	<title>ГРАМОТНЫЕ ИНВЕСТИЦИИ</title>
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="img/favicon.png">
@@ -17,12 +17,7 @@
 
 	<!-- CUSTOM HTML -->
 
-	<div class="container" style="max-width: 700px; margin: auto">
-
-		<img src="images/dest/preview.jpg" alt="Start HTML5 Template" width="100%"><br><br>
-		<h2>Welcome to startup HTML template OptimizedHTML 5!</h2>
-
-	</div>
+	
 
 	<script src="js/app.min.js"></script>
 
