Верстка первого экрана

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,42 @@
 <body>
 
 	<!-- CUSTOM HTML -->
-
+	<div class="main">
+		<div class="container">
+			<div class="main__content">
+				<div class="description">
+					<h1 class="description__title">
+						ГРАМОТНЫЕ <br> ИНВЕСТИЦИИ
+					</h1>
+					<p class="description__subtitle">Авторский курс Артема Ивина</p>
+					<div class="included">
+						<ul class="included__list">
+							<li class="included__item">7 индивидуальных занятий</li>
+							<li class="included__item">Более 6 лет опыта на торгах</li>
+						</ul>
+						<ul class="included__list">
+							<li class="included__item">Живой вебинар с автором курса</li>
+							<li class="included__item">Увеличь свой доход +100%</li>
+						</ul>
+					</div>
+				</div>
+				<div class="play">
+					<div class="play__wrapp">
+						<div class="play__border"></div>
+						<div class="play__pulse"></div>
+						
+						<a href="#" class="play__btn"></a>
+					</div>
+					<div class="play__author">
+						<img src="images/dest/artem.png" alt="author">
+					</div>
+					
+				</div>
+			</div>
+			<a href="#" class="btn">Записаться на курс</a>
+		</div>
+	</div>
+	<!-- /.main -->
 	
 
 	<script src="js/app.min.js"></script>
