Адаптив главной секции

--- a/app/index.html
+++ b/app/index.html
@@ -37,10 +37,10 @@
 				</div>
 				<div class="play">
 					<div class="play__wrapp">
-						<div class="play__border"></div>
 						<div class="play__pulse"></div>
 						
 						<a href="#" class="play__btn"></a>
+						<span class="play__text">Посмотрите <br> приветсвенное <br> видео</span>
 					</div>
 					<div class="play__author">
 						<img src="images/dest/artem.png" alt="author">
@@ -48,7 +48,8 @@
 					
 				</div>
 			</div>
-			<a href="#" class="btn">Записаться на курс</a>
+			<a href="#" class="btn btn--top">Записаться на курс</a>
+			
 		</div>
 	</div>
 	<!-- /.main -->
