Адаптив ноут (правки)

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>ГРАМОТНЫЕ ИНВЕСТИЦИИ</title>
+	<title>Грамотные инвестиции</title>
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="img/favicon.png">
@@ -20,9 +20,7 @@
 		<div class="container">
 			<div class="main__content">
 				<div class="description">
-					<h1 class="description__title">
-						ГРАМОТНЫЕ <br> ИНВЕСТИЦИИ
-					</h1>
+					<h1 class="description__title">Грамотные <br>инвестиции</h1>
 					<p class="description__subtitle">Авторский курс Артема Ивина</p>
 					<div class="included">
 						<ul class="included__list">
