--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 			<div class="problem__content">
 				<div class="heading">
 					<h2 class="heading__title heading__title--left"><span class="heading__title heading__title--accent">П</span>роблемы</h2>
-					<p class="heading__subtitle">которые мешают Вам заработать</p>
+					<p class="heading__subtitle heading__subtitle--left">которые мешают Вам заработать</p>
 				</div>
 				<ul class="problem__list">
 					<li class="problem__items">Финансовая неграмотность</li>
@@ -70,6 +70,21 @@
 		</div>
 	</section>
 	<!-- /.problem -->
+
+	<!-- Now -->
+	<section class="now">
+		<div class="container">
+			<div class="heading">
+				<h2 class="heading__title"><span class="heading__title heading__title--accent">П</span>очему</h2>
+				<p class="heading__subtitle">инвестировать нужно сейчас?</p>
+			</div>
+			<div class="now__content">
+				<p class="now__description">Если начать уже сейчас инвестировать <span class="now__description--accent">по 7 000 ₽ в месяц</span> через 20 лет есть вероятность накопть <span class="now__description--accent">10 млн. рублей </span> на счёте!</p>
+			</div>
+			<a href="#" class="btn btn--now">Начать инвестировать</a>
+		</div>
+	</section>
+	<!-- /.now -->
 
 
 	<script src="js/app.min.js"></script>
