--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,23 @@
 	</section>
 	<!-- /.now -->
 
+	<!-- Benefits -->
+	<section class="benefits">
+		<div class="container">
+			<div class="heading">
+				<h2 class="heading__title"><span class="heading__title heading__title--accent">П</span>очему</h2>
+				<p class="heading__subtitle">инвестировать нужно сейчас?</p>
+			</div>
+			<div class="benefits__content">
+				<div class="benefits__items">
+					<img class="benefits__image" src="" alt="">
+					<p class="benefits__text"><span class="benefits__text--accent">1.</span>Фундаментальный анализ</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- /.benefits -->
+
 
 	<script src="js/app.min.js"></script>
 
