--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,8 @@
 		<div class="container">
 			<div class="problem__content">
 				<div class="heading">
-					<h2 class="heading__title heading__title--left"><span class="heading__title heading__title--accent">П</span>роблемы</h2>
+					<h2 class="heading__title heading__title--left"><span
+							class="heading__title heading__title--accent">П</span>роблемы</h2>
 					<p class="heading__subtitle heading__subtitle--left">которые мешают Вам заработать</p>
 				</div>
 				<ul class="problem__list">
@@ -65,7 +66,7 @@
 					<li class="problem__items">Постоянные долги</li>
 					<li class="problem__items">Отсутствие будущей нормальной пенсии</li>
 				</ul>
-				
+
 			</div>
 		</div>
 	</section>
@@ -79,7 +80,9 @@
 				<p class="heading__subtitle">инвестировать нужно сейчас?</p>
 			</div>
 			<div class="now__content">
-				<p class="now__description">Если начать уже сейчас инвестировать <span class="now__description--accent">по 7 000 ₽ в месяц</span> через 20 лет есть вероятность накопть <span class="now__description--accent">10 млн. рублей </span> на счёте!</p>
+				<p class="now__description">Если начать уже сейчас инвестировать <span class="now__description--accent">
+						<br> по 7 000 ₽ в месяц</span> через 20 лет есть <br> вероятность накопть <span
+						class="now__description--accent">10 млн. рублей </span> на счёте!</p>
 			</div>
 			<a href="#" class="btn btn--now">Начать инвестировать</a>
 		</div>
@@ -94,14 +97,132 @@
 				<p class="heading__subtitle">инвестировать нужно сейчас?</p>
 			</div>
 			<div class="benefits__content">
-				<div class="benefits__items">
-					<img class="benefits__image" src="" alt="">
-					<p class="benefits__text"><span class="benefits__text--accent">1.</span>Фундаментальный анализ</p>
+				<div class="benefit__wrapp">
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-1.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">1.</span> Фундаментальный анализ</p>
+					</div>
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-2.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">2.</span> Технический анализ</p>
+					</div>
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-3.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">3.</span> Психология в трейдинге</p>
+					</div>
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-4.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">4.</span> Графический анализ</p>
+					</div>
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-5.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">5.</span> Свечной анализ</p>
+					</div>
+				</div>
+				<div class="benefit__wrapp">
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-6.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">6.</span> Стратегия</p>
+					</div>
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-7.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">7.</span> Тактика</p>
+					</div>
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-8.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">8.</span> Ошибки</p>
+					</div>
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-9.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">9.</span> Криптовалютыю Биткоин</p>
+					</div>
+					<div class="benefits__items">
+						<img class="benefits__image" src="images/dest/benefit-10.png" alt="benefits">
+						<p class="benefits__text"><span class="benefits__text--accent">10.</span> IPO</p>
+					</div>
 				</div>
 			</div>
+			<a href="#" class="btn">Выбрать тариф</a>
 		</div>
 	</section>
 	<!-- /.benefits -->
+
+	<!-- Rate -->
+	<section class="rate">
+		<div class="container">
+			<div class="heading">
+				<p class="heading__subtitle"><span class="heading__title heading__title--accent">В</span>ыберете удобный для Вас тариф</p>
+			</div>
+			<div class="rate__content">
+				<div class="rate__item">
+					<div class="item__wrapp">
+						<h3 class="item__title">Основной курс</h3>
+						<p class="item__subtitle">7 индивидуальных занятий по Skype, каждое занятие 60 минут</p>
+						<span class="item__desc">Пошагово через демонстрацию экрана я покажу и расскажу как найти, проанализировать технически и фундаментально, купить, и продать акции комапнии с прибылью.</span>
+					</div>
+				</div>
+				<div class="rate__item">
+					<div class="item__wrapp">
+						<h3 class="item__title">Индивидуальная консультация</h3>
+						<p class="item__subtitle">Индивидуальные занятия по Skype, каждое занятие  60 минут </p>
+						<span class="item__desc">Ты сможешь лично задать все вопросы по своему портфелю, стратегии, техническому и фундаментальному анализу по скайпу, продолжительность 60 минут. </span>
+					</div>
+				</div>
+				<div class="rate__item">
+					<div class="item__wrapp">
+						<h3 class="item__title">Сигналы на покупку и продажу акцийя</h3>
+						<p class="item__subtitle">Доступ в закрытый Telegram канал на 1 год</p>
+						<span class="item__desc">Я каждый день выкладываю точки входа и выхода из основных сделок, которые есть у меня в портфеле.минут. с прибылью.</span>
+					</div>
+				</div>
+			</div>
+			<a href="#" class="btn">Записаться на курс</a>
+		</div>
+	</section>
+	<!-- /.rate -->
+
+	<!-- Reviews -->
+	<section class="reviews">
+		<div class="container">
+			<div class="heading">
+				<h2 class="heading__title"><span class="heading__title heading__title--accent">Отзывы</span></h2>
+				<p class="heading__subtitle">тех, кто уже зарабатывает</p>
+			</div>
+			<div class="reviews__content">
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				
+			</div>
+			
+		</div>
+	</section>
+	<!-- /.review -->
+
+	<!-- Form -->
+	<section class="form">
+		<img src="images/dest/artem-3.png" alt="author" class="form__author">
+		<div class="container">
+			<div class="heading">
+				<h2 class="heading__title"><span class="heading__title heading__title--accent">Запишитесь на курс</span></h2>
+				<p class="heading__subtitle">и измените свою жизнь к лучшему</p>
+			</div>
+			<div class="form__content">
+				<form action="send.php" method="POST" class="form__wrap">
+					<label for="name" class="form__label">Ваше имя:</label>
+					<input type="text" id="name" name="name" class="form__input" placeholder="Артём Ивин">
+					<label for="tel" class="form__label">Ваш телефон:</label>
+					<input type="text" id="tel" name="tel" class="form__input" placeholder="+375 (29) 520-95-09">
+					<label for="email" class="form__label">Ваш E-mail:</label>
+					<input type="text" id="email" name="email" class="form__input" placeholder="example@mail.ru">
+					<input type="button" class="btn form__btn" value="Записаться на курс">
+				</form>
+			</div>
+			
+		</div>
+	
+	</section>
+	<!-- /.form -->
 
 
 	<script src="js/app.min.js"></script>
