--- a/app/index.html
+++ b/app/index.html
@@ -188,11 +188,38 @@
 				<h2 class="heading__title"><span class="heading__title heading__title--accent">Отзывы</span></h2>
 				<p class="heading__subtitle">тех, кто уже зарабатывает</p>
 			</div>
-			<div class="reviews__content">
+			<div class="reviews__content slider">
 				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
 				</div>
-				
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div><div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div><div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div><div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div><div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div><div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div><div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div><div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div><div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
 			</div>
 			
 		</div>
