--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 <body>
 
 	<!-- CUSTOM HTML -->
-	<div class="main">
+	<section class="main">
 		<div class="container">
 			<div class="main__content">
 				<div class="description">
@@ -32,24 +32,21 @@
 							<li class="included__item">Увеличь свой доход +100%</li>
 						</ul>
 					</div>
+					<a href="#" class="btn btn--top" data-scroll="#form">Записаться на курс</a>
 				</div>
 				<div class="play">
 					<div class="play__wrapp">
 						<div class="play__pulse"></div>
-
 						<a href="#" class="play__btn"></a>
 						<span class="play__text">Посмотрите <br> приветсвенное <br> видео</span>
 					</div>
 					<div class="play__author">
 						<img src="images/dest/artem.png" alt="author">
 					</div>
-
 				</div>
 			</div>
-			<a href="#" class="btn btn--top">Записаться на курс</a>
-
 		</div>
-	</div>
+	</section>
 	<!-- /.main -->
 
 	<!-- Problem -->
@@ -84,7 +81,7 @@
 						<br> по 7 000 ₽ в месяц</span> через 20 лет есть <br> вероятность накопть <span
 						class="now__description--accent">10 млн. рублей </span> на счёте!</p>
 			</div>
-			<a href="#" class="btn btn--now">Начать инвестировать</a>
+			<a href="#" class="btn btn--now" data-scroll="#form">Начать инвестировать</a>
 		</div>
 	</section>
 	<!-- /.now -->
@@ -142,7 +139,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="#" class="btn">Выбрать тариф</a>
+			<a href="#" class="btn" data-scroll="#form">Выбрать тариф</a>
 		</div>
 	</section>
 	<!-- /.benefits -->
@@ -151,32 +148,38 @@
 	<section class="rate">
 		<div class="container">
 			<div class="heading">
-				<p class="heading__subtitle"><span class="heading__title heading__title--accent">В</span>ыберете удобный для Вас тариф</p>
+				<p class="heading__subtitle"><span class="heading__title heading__title--accent">В</span>ыберете удобный
+					для
+					Вас тариф</p>
 			</div>
 			<div class="rate__content">
 				<div class="rate__item">
 					<div class="item__wrapp">
 						<h3 class="item__title">Основной курс</h3>
 						<p class="item__subtitle">7 индивидуальных занятий по Skype, каждое занятие 60 минут</p>
-						<span class="item__desc">Пошагово через демонстрацию экрана я покажу и расскажу как найти, проанализировать технически и фундаментально, купить, и продать акции комапнии с прибылью.</span>
+						<span class="item__desc">Пошагово через демонстрацию экрана я покажу и расскажу как найти,
+							проанализировать технически и фундаментально, купить, и продать акции комапнии с
+							прибылью.</span>
 					</div>
 				</div>
 				<div class="rate__item">
 					<div class="item__wrapp">
 						<h3 class="item__title">Индивидуальная консультация</h3>
-						<p class="item__subtitle">Индивидуальные занятия по Skype, каждое занятие  60 минут </p>
-						<span class="item__desc">Ты сможешь лично задать все вопросы по своему портфелю, стратегии, техническому и фундаментальному анализу по скайпу, продолжительность 60 минут. </span>
+						<p class="item__subtitle">Индивидуальные занятия по Skype, каждое занятие 60 минут </p>
+						<span class="item__desc">Ты сможешь лично задать все вопросы по своему портфелю, стратегии,
+							техническому и фундаментальному анализу по скайпу, продолжительность 60 минут. </span>
 					</div>
 				</div>
 				<div class="rate__item">
 					<div class="item__wrapp">
 						<h3 class="item__title">Сигналы на покупку и продажу акцийя</h3>
 						<p class="item__subtitle">Доступ в закрытый Telegram канал на 1 год</p>
-						<span class="item__desc">Я каждый день выкладываю точки входа и выхода из основных сделок, которые есть у меня в портфеле.минут. с прибылью.</span>
+						<span class="item__desc">Я каждый день выкладываю точки входа и выхода из основных сделок, которые
+							есть у меня в портфеле.минут. с прибылью.</span>
 					</div>
 				</div>
 			</div>
-			<a href="#" class="btn">Записаться на курс</a>
+			<a href="#" class="btn" data-scroll="#form">Записаться на курс</a>
 		</div>
 	</section>
 	<!-- /.rate -->
@@ -203,25 +206,57 @@
 				</div>
 				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div><div class="reviews__item">
+				</div>
+				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div><div class="reviews__item">
+				</div>
+				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div><div class="reviews__item">
+				</div>
+				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div><div class="reviews__item">
+				</div>
+				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div><div class="reviews__item">
+				</div>
+				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div><div class="reviews__item">
+				</div>
+				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div><div class="reviews__item">
+				</div>
+				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
-				</div><div class="reviews__item">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/reviews-1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
 					<img src="images/dest/reviews-1.png" alt="reviews">
 				</div>
 			</div>
-			
+
 		</div>
 	</section>
 	<!-- /.review -->
@@ -231,10 +266,11 @@
 		<img src="images/dest/artem-3.png" alt="author" class="form__author">
 		<div class="container">
 			<div class="heading">
-				<h2 class="heading__title"><span class="heading__title heading__title--accent">Запишитесь на курс</span></h2>
+				<h2 class="heading__title"><span class="heading__title heading__title--accent">Запишитесь на курс</span>
+				</h2>
 				<p class="heading__subtitle">и измените свою жизнь к лучшему</p>
 			</div>
-			<div class="form__content">
+			<div class="form__content" id="form">
 				<form action="send.php" method="POST" class="form__wrap">
 					<label for="name" class="form__label">Ваше имя:</label>
 					<input type="text" id="name" name="name" class="form__input" placeholder="Артём Ивин">
@@ -242,12 +278,13 @@
 					<input type="text" id="tel" name="tel" class="form__input" placeholder="+375 (29) 520-95-09">
 					<label for="email" class="form__label">Ваш E-mail:</label>
 					<input type="text" id="email" name="email" class="form__input" placeholder="example@mail.ru">
-					<input type="button" class="btn form__btn" value="Записаться на курс">
+					<!-- <input type="button" class="btn form__btn" value="Записаться на курс"> -->
+					<button type="submit" class="btn form__btn">Записаться на курс</button>
 				</form>
 			</div>
-			
+
 		</div>
-	
+
 	</section>
 	<!-- /.form -->
 
