--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
 
 </head>
 
-	<!-- CUSTOM HTML -->
+<!-- CUSTOM HTML -->
+
 <body>
 
 	<!--  Header -->
@@ -29,20 +30,30 @@
 					<a href="#" data-scroll="#contacts" class="nav__item">Контакты</a>
 				</div>
 				<div class="social">
-					<a href="https://tlgg.ru/89537385366" class="social__item" target="_blank"><img src="images/dest/telegram-dark.png" alt="telegram"></a>
-					<a href="viber://chat?number=79537385366" class="social__item" target="_blank"><img src="images/dest/viber-dark.png" alt="viber"></a>
-					<a href="https://www.instagram.com/artemivin/" class="social__item" target="_blank"><img src="images/dest/insatgram-dark.png" alt="insatgram"></a>
-					<a href="https://vk.com/ivinartem" class="social__item" target="_blank"><img src="images/dest/vk-dark.png" alt="vk"></a>
-					<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__item" target="_blank"><img src="images/dest/whatsapp-dark.png" alt="whatsapp"></a>
+					<a href="https://tlgg.ru/89537385366" class="social__item" target="_blank"><img
+							src="images/dest/telegram-dark.png" alt="telegram"></a>
+					<a href="viber://chat?number=79537385366" class="social__item" target="_blank"><img
+							src="images/dest/viber-dark.png" alt="viber"></a>
+					<a href="https://www.instagram.com/artemivin/" class="social__item" target="_blank"><img
+							src="images/dest/insatgram-dark.png" alt="insatgram"></a>
+					<a href="https://vk.com/ivinartem" class="social__item" target="_blank"><img
+							src="images/dest/vk-dark.png" alt="vk"></a>
+					<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__item" target="_blank"><img
+							src="images/dest/whatsapp-dark.png" alt="whatsapp"></a>
 				</div>
 			</div>
 			<div class="header__wrap header__wrap--mobile">
 				<div class="social">
-					<a href="" class="social__item" target="_blank"><img src="images/dest/telegram-dark.png" alt="telegram"></a>
-					<a href="viber://chat?number=79537385366" class="social__item" target="_blank"><img src="images/dest/viber-dark.png" alt="viber"></a>
-					<a href="https://www.instagram.com/artemivin/" class="social__item" target="_blank"><img src="images/dest/insatgram-dark.png" alt="insatgram"></a>
-					<a href="https://vk.com/ivinartem" class="social__item" target="_blank"><img src="images/dest/vk-dark.png" alt="vk"></a>
-					<a href="" class="social__item" target="_blank"><img src="images/dest/whatsapp-dark.png" alt="whatsapp"></a>
+					<a href="" class="social__item" target="_blank"><img src="images/dest/telegram-dark.png"
+							alt="telegram"></a>
+					<a href="viber://chat?number=79537385366" class="social__item" target="_blank"><img
+							src="images/dest/viber-dark.png" alt="viber"></a>
+					<a href="https://www.instagram.com/artemivin/" class="social__item" target="_blank"><img
+							src="images/dest/insatgram-dark.png" alt="insatgram"></a>
+					<a href="https://vk.com/ivinartem" class="social__item" target="_blank"><img
+							src="images/dest/vk-dark.png" alt="vk"></a>
+					<a href="" class="social__item" target="_blank"><img src="images/dest/whatsapp-dark.png"
+							alt="whatsapp"></a>
 				</div>
 
 				<a href="#" class="nav_btn" id="nav_btn">
@@ -307,6 +318,142 @@
 	</section>
 	<!-- /.review -->
 
+	<section class="faq" id="faq">
+		<div class="container">
+			<div class="heading">
+				<p class="heading__subtitle"><span class="heading__title heading__title--accent">О</span>тветы на часто
+					задаваемые вопросы:</p>
+			</div>
+			<div class="faq__wrap">
+
+				<div class="accordion">
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+					<div class="panel">
+						<div class="panel__title">
+							<a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, quam.</a>
+						</div>
+						<div class="panel__collapse">
+							<p>
+								Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore velit, temporibus
+								explicabo doloribus repellendus quod est dolorum, iste dolor consectetur laboriosam quidem eaque
+								amet vel expedita? Nostrum, cumque! Facilis?
+							</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!-- Form -->
 	<section class="form">
 		<img src="images/dest/artem-3.png" alt="author" class="form__author">
@@ -333,6 +480,66 @@
 
 	</section>
 	<!-- /.form -->
+
+	<!-- Footer -->
+	<footer class="footer" id="contacts">
+		<div class="container">
+			<div class="footer__wrap">
+				<div class="row">
+					<div class="footer__block contacts">
+						<h3 class="footer__title">Контакты</h3>
+						<div class="contacts__block">
+							<a href="tel:+79537385366" class="phone"><img src="images/dest/phone.png"
+									alt="phone">+79537385366</a>
+							<a href="mailto:becs@bk.ru" class="mail"><img src="images/dest/mail.png" alt="mail">becs@bk.ru</a>
+							<div class="social">
+								<a href="viber://chat?number=79537385366" class="social__link"><img
+										src="images/dest/viber-dark.png" alt="viber"></a>
+								<a href="https://tlgg.ru/89537385366" class="social__link"><img
+										src="images/dest/telegram-dark.png" alt="telegram"></a>
+								<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__link"><img
+										src="images/dest/whatsapp-dark.png" alt="whatsapp"></a>
+								<a href="https://vk.com/ivinartem" class="social__link"><img src="images/dest/vk-dark.png"
+										alt="vk"></a>
+								<a href="https://www.instagram.com/artemivin/" class="social__link"><img
+										src="images/dest/insatgram-dark.png" alt="instagram"></a>
+							</div>
+						</div>
+					</div>
+					<div class="footer__block requisites">
+						<h3 class="footer__title">Реквизиты</h3>
+						<div class="requisites__block">
+							<ul>
+								<li><img src="images/dest/sber.png" alt="Sber">Сбербанк: 4279 5300 2056 1132</li>
+								<li><img src="images/dest/tinkoff.png" alt="tinkoff">Тинькофф: 5536 9138 0112 4880</li>
+								<li><a href="https://money.yandex.ru/to/410011542528807" target="_blank"><img
+											src="images/dest/yandex.png" alt="yandex">Яндекс: 410011542528807</a></li>
+								<li><a href="https://qiwi.com/payment/form/99" target="_blank"><img src="images/dest/qiwi.png"
+											alt="qiwi">Qiwi: +79537385366</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="footer__block requisites">
+						<h3 class="footer__title">Информация</h3>
+						<div class="requisites__block">
+							<ul>
+								<li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quis vel deleniti velit maxime non?</li>
+								<li class="politic__link">Политика конфиденциальности</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="pay__block">
+					<img src="images/dest/visa.png" alt="visa">
+					<img src="images/dest/master.png" alt="master">
+					<img src="images/dest/qiwi-pay.png" alt="qiwi">
+					<img src="images/dest/sber-pay.png" alt="sber">
+					<img src="images/dest/yandex-pay.png" alt="yandex">
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- /.footer -->
 
 
 	<script src="js/app.min.js"></script>
