--- a/app/index.html
+++ b/app/index.html
@@ -464,7 +464,7 @@
 				<p class="heading__subtitle">и измените свою жизнь к лучшему</p>
 			</div>
 			<div class="form__content" id="form">
-				<form action="send.php" method="POST" class="form__wrap">
+				<form action="#" method="POST" class="form__wrap">
 					<label for="name" class="form__label">Ваше имя:</label>
 					<input type="text" id="name" name="name" class="form__input" placeholder="Артём Ивин" required>
 					<label for="tel" class="form__label">Ваш телефон:</label>
@@ -516,6 +516,7 @@
 											src="images/dest/yandex.png" alt="yandex">Яндекс: 410011542528807</a></li>
 								<li><a href="https://qiwi.com/payment/form/99" target="_blank"><img src="images/dest/qiwi.png"
 											alt="qiwi">Qiwi: +79537385366</a></li>
+								<li><img src="images/dest/btc.png">16f6eVesR9WRCjQ5gG7nPgRJDyuQeXwycB</li>
 							</ul>
 						</div>
 					</div>
@@ -529,13 +530,6 @@
 							</ul>
 						</div>
 					</div>
-				</div>
-				<div class="pay__block">
-					<img src="images/dest/visa.png" alt="visa">
-					<img src="images/dest/master.png" alt="master">
-					<img src="images/dest/qiwi-pay.png" alt="qiwi">
-					<img src="images/dest/sber-pay.png" alt="sber">
-					<img src="images/dest/yandex-pay.png" alt="yandex">
 				</div>
 			</div>
 		</div>
